first pass at unworked notebooks

--- a/exercises/notebooks/SV_run_dsi.ipynb
+++ b/exercises/notebooks/SV_run_dsi.ipynb
@@ -56,7 +56,7 @@
    "id": "5",
    "metadata": {},
    "source": [
-    "Load the control file from ies"
+    "Load the control file from ies into a variable called \"pst\":"
    ]
   },
   {
@@ -65,16 +65,14 @@
    "id": "6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pst = pyemu.Pst(os.path.join(ies_d, \"pest.pst\"))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "7",
    "metadata": {},
    "source": [
-    "Get the prior observation (simulated results) ensemble - this will have outputs from the past and the future"
+    "Get the prior observation (simulated results) ensemble from the `pst.ies` results handler and call it \"oe\" - this will have outputs from the past and the future"
    ]
   },
   {
@@ -83,9 +81,7 @@
    "id": "8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "oe = pst.ies.obsen0"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -181,7 +177,7 @@
    "id": "18",
    "metadata": {},
    "source": [
-    "prepare the DSI input and outputs with a pest interface so that ies can use the dsi model with the `DSI.prepare_pestpp()` method (set `use_runstor` to True)"
+    "prepare the DSI input and outputs with a pest interface so that ies can use the dsi model with the `DSI.prepare_pestpp()` method (set `use_runstor` to True) and call the returned variable \"dpst\":"
    ]
   },
   {
@@ -190,18 +186,14 @@
    "id": "19",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dpst = dsi.prepare_pestpp(t_d=dsi_d, use_runstor=True)"
-   ]
+   "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "20",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dpst"
+    "Check out the contents of the `dsi_d` directory"
    ]
   },
   {
@@ -211,12 +203,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dpst.pestpp_options.pop(\"parcov\", None)"
+    "dpst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dpst.pestpp_options.pop(\"parcov\", None)\n",
+    "dpst.pestpp_options[\"par_sigma_range\"] = 6"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "Define some options for ies to use with the dsi .  Use 300 realizations and 10 iterations"
@@ -225,18 +228,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "dpst.pestpp_options[\"ies_num_reals\"] = 300\n",
-    "dpst.pestpp_options[\"par_sigma_range\"] = 6\n",
-    "dpst.control_data.noptmax = 10"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "source": [
     "Bring over some options used with the full-order-model ies run:"
@@ -245,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,16 +267,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "source": [
-    "Save the control file"
+    "Save the control file, call it \"dsi.pst\":"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28",
+   "id": "29",
    "metadata": {},
    "source": [
     "DSI is fast, so fast, we dont need tcp/ip run mgmt, we can just use a simple external run mgr.  Start pestpp-ies in the dsi directory with the \"/e\" flag:"
@@ -295,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,20 +303,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "31",
    "metadata": {},
    "source": [
     "All this is the same as in the ies notebook:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "viz_noptmax = 3"
    ]
   },
   {
@@ -327,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_timeseries(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
+    "viz_noptmax = 3"
    ]
   },
   {
@@ -337,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
+    "helpers.plot_ies_timeseries(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
    ]
   },
   {
@@ -346,12 +335,22 @@
    "id": "34",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "helpers.plot_ies_forecasts(dsi_d, pst_name=\"dsi.pst\", noptmax=viz_noptmax)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": []
