--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -71,7 +71,7 @@
    "id": "5",
    "metadata": {},
    "source": [
-    "load the control file and check that it has had weights set"
+    "load the control file from the working directory and call it \"pst\" and check that it has had weights set"
    ]
   },
   {
@@ -81,14 +81,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst = pyemu.Pst(os.path.join(working_d, \"pest.pst\"))\n",
+    "pst = pyemu.Pst(os.path.join(working_d, \"pest.pst\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "assert pst.nobs > pst.nnz_obs\n",
     "assert pst.nnz_obs > 0"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "Modify any ies settings.  Lets use 4 iterations, 50 realizations, and a bad-phi-sigma of 1.75"
@@ -97,15 +106,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
     "pst.control_data.noptmax = 4\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 100\n",
+    "pst.pestpp_options[\"ies_num_reals\"] = 500\n",
     "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
-    "pst.pestpp_options[\"panther_agent_freeze_on_fail\"] = True\n",
-    "# pst.pestpp_options.pop(\"ies_phi_factor_file\",None)\n",
+    "\n",
+    "# other options to use:\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
     "# pst.pestpp_options[\"ies_reinflate_num_reals\"] = [50, -50]\n",
     "# pst.pestpp_options[\"ies_multimodal_alpha\"] = 0.99\n",
@@ -117,25 +126,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
-    "Save the control file"
+    "Save the control file to the working directory and call it \"pest.pst\":"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
     "run PESTPP-IES"
@@ -144,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "Process and plot the results.  "
@@ -171,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "Call `helpers.plot_ies_timeseries()`"
@@ -180,16 +187,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "helpers.plot_ies_timeseries(master_d, noptmax=viz_noptmax)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "source": [
     "Plot some property realizations using `helpers.plot_ies_properties()` by looping over each of these property tags:\n"
@@ -198,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,43 +229,39 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
-   "metadata": {},
-   "source": [
-    "Plot the prior and posterior forecast histograms (the money plots!)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "20",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "helpers.plot_ies_forecasts(master_d, noptmax=viz_noptmax)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "21",
-   "metadata": {},
-   "source": [
-    "Explore other ies results via the `Pst.ies` handler:"
+    "Plot the prior and posterior forecast histograms (the money plots!) with `helpers.plot_ies_forecasts()`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pst = pyemu.Pst(os.path.join(master_d, \"pest.pst\"))"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "Explore other ies results via the `Pst.ies` handler.  First reload the `pyemu.Pst` from the master directory:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24",
    "metadata": {},
    "source": [
     "Plot the `actual` and `meas`ured phi sequence across iterations"
@@ -269,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "source": [
     "Visualize the parameter change summary across iterations"
@@ -303,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,30 +323,6 @@
     "    axes[1].set_title(\"iteration {0} upper bound\".format(i))\n",
     "    plt.tight_layout()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
