--- a/exercises/notebooks/SV_run_opt.ipynb
+++ b/exercises/notebooks/SV_run_opt.ipynb
@@ -105,7 +105,7 @@
     }
    },
    "source": [
-    "Load the control file"
+    "Load the control file from the working directory:"
    ]
   },
   {
@@ -114,46 +114,41 @@
    "id": "10",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "pst = pyemu.Pst(os.path.join(working_d, \"pest.pst\"))\n",
     "assert pst.nobs > pst.nnz_obs\n",
     "assert pst.nnz_obs > 0"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "source": [
-    "First we need to modify the parameter data section to identify which parameters will be adjusted during optimization - we call these decision variables:"
+    "get a reference to the parameter data and call it \"par\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "par = pst.parameter_data"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "Get the posterior parameter ensemble and look for the \"base\" realization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "post_iter = pst.ies.phiactual.iteration.max()"
    ]
   },
   {
@@ -163,14 +158,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pe = pst.ies.get(\"paren\", post_iter)\n",
-    "pe"
+    "post_iter = pst.ies.phiactual.iteration.max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16",
+   "metadata": {},
+   "source": [
+    "Get the posterior parameter ensemble from the ies run and call it \"pe\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18",
+   "metadata": {},
+   "source": [
+    "If the \"base\" realization exists in the posterior parameter ensemble (hopefully!), assign it the `parval1` values in the control file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,27 +200,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "20",
    "metadata": {},
    "source": [
-    "### Setting up the decision variables\n",
-    "\n",
-    "Find all parameters with \"wel\" in the name:"
+    "Check that the `parval1` value have been updated:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22",
+   "metadata": {},
+   "source": [
+    "### Setting up the decision variable\n",
+    "select the block of \"par\" that has \"wel\" in the `parnme` column, copy it and call it \"wpar\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "wpar = par.loc[par.parnme.str.contains(\"wel\"), :].copy()"
+    "assert wpar.shape[0] > 0"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "25",
    "metadata": {},
    "source": [
     "cast the `kper` to an \"int\", then make sure we are only adjusting wel pars that correspond to the future period"
@@ -211,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,25 +266,43 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "27",
    "metadata": {},
    "source": [
-    "Markk these well parameters as \"none\" transformed and modify their derivative calculation quantities to make sure we are using large enough perturbation increments"
+    "Mark these well parameters as \"none\" transformed (the \"partrans\" columnn) and set their parameter group name to \"decvar\" (the \"pargp\" column):\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
     "par.loc[pred_wpar.parnme, \"partrans\"] = \"none\"\n",
     "par.loc[pred_wpar.parnme, \"pargp\"] = \"decvar\"\n",
     "par.loc[pred_wpar.parnme, \"parubnd\"] = 1.5\n",
-    "par.loc[pred_wpar.parnme, \"parlbnd\"] = 0.0\n",
+    "par.loc[pred_wpar.parnme, \"parlbnd\"] = 0.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29",
+   "metadata": {},
+   "source": [
+    "and modify their derivative calculation quantities to make sure we are using large enough perturbation increments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "predwel_wpar = wpar.loc[wpar.parnme.str.contains(\"pred\"), \"parnme\"]\n",
     "assert len(predwel_wpar) > 0\n",
+    "\n",
     "par.loc[predwel_wpar, \"parval1\"] = 0.0  # set the pred well rates to zero initially\n",
     "\n",
     "pst.rectify_pgroups()\n",
@@ -254,26 +313,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "31",
    "metadata": {},
    "source": [
-    "Now modify the observation data section: set all obs to zero weight, then find constraints and set them accordingly"
+    "Now modify the observation data section: set all obs to zero weight, then find constraints and set them accordingly.  Get a reference to the observation data called \"obs\" and set all weights in obs to zero:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "32",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs = pst.observation_data\n",
-    "obs[\"weight\"] = 0.0"
+    "assert obs.weight.sum() == 0"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "34",
    "metadata": {},
    "source": [
     "find any observation name that have \"forecast\", \"diff\" and \"riv-swgw\" in the name.  There should be exactly 1 of these"
@@ -282,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "36",
    "metadata": {},
    "source": [
     "What is the value for this quantity in the calibrated model?"
@@ -307,36 +373,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cal_diff = pst.ies.get(\"obsen\", post_iter).loc[\"base\", fobs.obsnme]"
+    "cal_diff = pst.ies.get(\"obsen\", post_iter).loc[\"base\", fobs.obsnme]\n",
+    "cal_diff"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "38",
    "metadata": {},
    "source": [
-    "Set the observation to have a weight of 1.0, set the `obgnme` to \"greater_than\" and the `obsval` to 0.0.  This tells pestpp-opt that we want the future long-term average swgw exchange to be at least the same amount as the historic equivalent."
+    "Set the observation in \"fobs\" to have a weight of 1.0, set the `obgnme` to \"greater_than\" and the `obsval` to 0.0.  This tells pestpp-opt that we want the future long-term average swgw exchange to be at least the same amount as the historic equivalent."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs.loc[fobs.obsnme, \"weight\"] = 1.0\n",
-    "obs.loc[fobs.obsnme, \"obsval\"] = 0  # cal_diff * 0.5\n",
-    "obs.loc[fobs.obsnme, \"obgnme\"] = \"greater_than\""
+    "assert obs.loc[fobs.obsnme, \"weight\"] == 1\n",
+    "assert obs.loc[fobs.obsnme, \"obgnme\"] == \"greater_than\"\n",
+    "assert obs.loc[fobs.obsnme, \"obsval\"] == 0.0"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "31",
+   "id": "41",
    "metadata": {},
    "source": [
     "Find the sum of future gw pumping observation - this will be our objective function that we want to maximize.  The observation should have \"forecast\",\"pred\" and \"wel\" in the name.  There should be only one observation.  Assign this observation to a variable called `obj_name`"
@@ -345,7 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33",
+   "id": "43",
    "metadata": {},
    "source": [
     "We also need to make sure that during each future stress period, we are meeting the long-term historic production rates.  \n",
@@ -374,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,16 +461,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35",
+   "id": "45",
    "metadata": {},
    "source": [
-    "Now cast the `datetime` column using `pd.to_datetime()`"
+    "Now cast the `datetime` column in \"wfobs\" using `pd.to_datetime()`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37",
+   "id": "47",
    "metadata": {},
    "source": [
     "Now split these well-flux obs into historic and predictive/future by the year 2015"
@@ -413,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39",
+   "id": "49",
    "metadata": {},
    "source": [
     "What was the historic maximum gw production rate (using the posterior ensemble base realization)?"
@@ -432,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42",
+   "id": "52",
    "metadata": {},
    "source": [
     "for the future/predictive well flux observations, set the `weight` to 1.0, the obsval to 90% of the historic max (assuming some future water conservation) and the `obgnme` to \"greater_than\""
@@ -461,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44",
+   "id": "54",
    "metadata": {},
    "source": [
     "Set `noptmax` to 1 and identify the objective function via the \"opt_objective_function\" argument.  Set the \"opt_direction\" to \"max\", telling pestpp-opt to maximize the future groundwater production"
@@ -481,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46",
+   "id": "56",
    "metadata": {},
    "source": [
     "Save the control file"
@@ -501,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48",
+   "id": "58",
    "metadata": {},
    "source": [
     "Run pestpp-opt using the `pyemu.os_utils.start_workers()` function:"
@@ -519,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50",
+   "id": "60",
    "metadata": {},
    "source": [
     "# post processing PESTPP-OPT"
@@ -546,7 +621,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51",
+   "id": "61",
    "metadata": {},
    "source": [
     "check the final and initial objective function value:"
@@ -555,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53",
+   "id": "63",
    "metadata": {},
    "source": [
     "So we are able to extract more gw but also make river sw-gw exchange have zero change into the future - nice!"
@@ -575,26 +650,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54",
+   "id": "64",
    "metadata": {},
    "source": [
-    "Plot the optimal decision variable values.  First read the optimal decision variables stored in the \"pest.1.par\" parameter value file:"
+    "Plot the optimal decision variable values.  First read the optimal decision variables stored in the \"pest.1.par\" parameter value file into a dataframe called \"opt_par_vals\" using `pyemu.pst_utils.read_parfile()`:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "65",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "opt_par_vals = pyemu.pst_utils.read_parfile(os.path.join(master_d, \"pest.1.par\"))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,28 +677,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57",
+   "id": "67",
    "metadata": {},
    "source": [
     "## investigating the response matrix\n",
     "\n",
-    "Load the response matrix (\"pest.1.jcb\") using `pyemu.Matrix.from_binary()`"
+    "Load the response matrix (\"pest.1.jcb\") using `pyemu.Matrix.from_binary()` into a variable called \"rm\" and the cast it to a dataframe using the `to_dataframe()` method:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "68",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rm = pyemu.Matrix.from_binary(os.path.join(master_d, \"pest.1.jcb\")).to_dataframe()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +710,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60",
+   "id": "70",
    "metadata": {},
    "source": [
     "# Reliability"
@@ -647,27 +718,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61",
+   "id": "71",
    "metadata": {},
    "source": [
-    "plot the posterior histogram of the river swgw flux difference (the obs we used as a constraint)"
+    "plot the posterior histogram of the river swgw flux difference (the obs we used as a constraint) using the `pst.ies` results handler:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "72",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "oe = pst.ies.get(\"obsen\", post_iter)\n",
-    "ax = oe.loc[:, fobs.obsnme].hist()\n",
-    "plt.tight_layout()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "63",
+   "id": "73",
    "metadata": {},
    "source": [
     "tell pestpp-opt how to use the uncertainty. We can also take advantage of the linear assumption and reuse the previous results so we dont need to any additional model runs (!)"
@@ -676,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,23 +771,22 @@
     "# look for a 60% reliable solution\n",
     "pst.pestpp_options[\"opt_risk\"] = 0.6\n",
     "\n",
-    "\n",
     "par = pst.parameter_data\n",
     "pst.write(os.path.join(working_d, \"pest.pst\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65",
+   "id": "75",
    "metadata": {},
    "source": [
-    "Rerun pestpp-opt :"
+    "Rerun pestpp-opt using the `pyemu.os_utils.run()` method in the working directory (we dont need paralle workers any more)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +795,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67",
+   "id": "77",
    "metadata": {},
    "source": [
     "Visualize these results the same we did earlier:"
@@ -738,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,16 +830,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70",
+   "id": "80",
    "metadata": {},
-   "source": [
-    "Have a play at optimizing the optimization hyper parameters:"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -814,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": []
