add mf6-adj notebook

--- a/exercises/instructors/SV_advanced.ipynb
+++ b/exercises/instructors/SV_advanced.ipynb
@@ -669,7 +669,7 @@
    "outputs": [],
    "source": [
     "# add sfr package to the gwf simulation\n",
-    "# set time_conversion to 86400.0, mover to True, boundname to True, and name the package \"sfr-1\"\n",
+    "# set time_conversion to 86400.0, mover to True, boundname to True, and name the package \"SFR-1\"\n",
     "\n",
     "sfr = flopy.mf6.ModflowGwfsfr(\n",
     "    gwf,\n",
@@ -680,7 +680,7 @@
     "    nreaches=nreaches,\n",
     "    packagedata=packagedata,\n",
     "    connectiondata=connectiondata,\n",
-    "    pname=\"sfr-1\",\n",
+    "    pname=\"SFR-1\",\n",
     ")"
    ]
   },
@@ -856,7 +856,7 @@
    "outputs": [],
    "source": [
     "# add lak package to the gwf simulation\n",
-    "# set mover to True, boundnames to True, and name the package \"lak-1\"\n",
+    "# set mover to True, boundnames to True, and name the package \"LAK-1\"\n",
     "\n",
     "lak = flopy.mf6.ModflowGwflak(\n",
     "    gwf,\n",
@@ -864,7 +864,7 @@
     "    print_input=True,\n",
     "    print_stage=True,\n",
     "    mover=True,\n",
-    "    pname=\"lak-1\",\n",
+    "    pname=\"LAK-1\",\n",
     "    stage_filerecord=f\"{name}.lak.hds\",\n",
     "    nlakes=nlakes,\n",
     "    packagedata=lake_pakagedata,\n",
@@ -944,14 +944,14 @@
    "source": [
     "perioddata = []\n",
     "if isUZF:\n",
-    "    packages = [[\"uzf-1\"], [\"lak-1\"], [\"sfr-1\"]]\n",
+    "    packages = [[\"uzf-1\"], [\"LAK-1\"], [\"SFR-1\"]]\n",
     "    for values in uzf.packagedata.array:\n",
     "        ifno, cellid = values[\"ifno\"], values[\"cellid\"]\n",
     "        i = cellid[1]\n",
     "        if i < 20:\n",
-    "            dst = \"lak-1\"\n",
+    "            dst = \"LAK-1\"\n",
     "        else:\n",
-    "            dst = \"sfr-1\"\n",
+    "            dst = \"SFR-1\"\n",
     "        perioddata.append((\"uzf-1\", int(ifno), dst, 0, \"factor\", 0.10))\n",
     "maxmvr = len(perioddata)\n",
     "perioddata_dict = {\n",
@@ -1405,6 +1405,14 @@
    "id": "98",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "xy = [\n",
     "    (float(gwf.modelgrid.xcellcenters[i, j]), float(gwf.modelgrid.ycellcenters[i, j]))\n",
@@ -1415,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1435,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1468,7 +1476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "106",
+   "id": "107",
    "metadata": {},
    "source": [
     "**NOTE:** There is spatial bias in the simulated results (*i.e.*, residuals are positive in the Northeast and negative in the Southwest)."
@@ -1536,7 +1544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107",
+   "id": "108",
    "metadata": {},
    "source": [
     "#### First 10 year transient period"
@@ -1545,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1556,7 +1564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1600,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,7 +1618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "113",
+   "id": "114",
    "metadata": {},
    "source": [
     "#### Second 10 year transient period"
@@ -1629,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1693,7 +1701,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1703,7 +1711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119",
+   "id": "120",
    "metadata": {},
    "source": [
     "### Streamflow results"
@@ -1712,7 +1720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1733,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1758,7 +1766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "122",
+   "id": "123",
    "metadata": {},
    "source": [
     "### Lake stage"
@@ -1767,7 +1775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1780,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1790,7 +1798,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1809,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1811,7 +1819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1833,7 +1841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": []
