--- a/exercises/notebooks/SV_run_ies.ipynb
+++ b/exercises/notebooks/SV_run_ies.ipynb
@@ -110,9 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pst.control_data.noptmax = 4\n",
-    "pst.pestpp_options[\"ies_num_reals\"] = 500\n",
-    "pst.pestpp_options[\"ies_bad_phi_sigma\"] = 1.75\n",
+    "\n",
     "\n",
     "# other options to use:\n",
     "# pst.pestpp_options[\"ies_n_iter_reinflate\"] = [2, 999]\n",
@@ -181,7 +179,7 @@
    "id": "15",
    "metadata": {},
    "source": [
-    "Call `helpers.plot_ies_timeseries()`"
+    "Call `helpers.plot_ies_timeseries()` with the `master_d` and go look at the plots...anything of note? good enough? "
    ]
   },
   {
@@ -232,6 +230,8 @@
    "id": "20",
    "metadata": {},
    "source": [
+    "Any thoughts about these property maps from a plausibility/prior standpoint?\n",
+    "\n",
     "Plot the prior and posterior forecast histograms (the money plots!) with `helpers.plot_ies_forecasts()`"
    ]
   },
@@ -248,6 +248,8 @@
    "id": "22",
    "metadata": {},
    "source": [
+    "Do these make sense?  everything seem ok?\n",
+    "\n",
     "Explore other ies results via the `Pst.ies` handler.  First reload the `pyemu.Pst` from the master directory:"
    ]
   },
@@ -322,6 +324,14 @@
     "    axes[0].set_title(\"iteration {0} lower bound\".format(i))\n",
     "    axes[1].set_title(\"iteration {0} upper bound\".format(i))\n",
     "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29",
+   "metadata": {},
+   "source": [
+    "Are you ok with these results?"
    ]
   }
  ],
