--- a/exercises/notebooks/SV_run_opt.ipynb
+++ b/exercises/notebooks/SV_run_opt.ipynb
@@ -148,7 +148,7 @@
    "id": "14",
    "metadata": {},
    "source": [
-    "Get the posterior parameter ensemble and look for the \"base\" realization"
+    "Get the posterior parameter ensemble and look for the \"base\" realization.  First, figure out how many ies iterations were done:"
    ]
   },
   {
@@ -306,7 +306,7 @@
     "par.loc[predwel_wpar, \"parval1\"] = 0.0  # set the pred well rates to zero initially\n",
     "\n",
     "pst.rectify_pgroups()\n",
-    "pst.parameter_groups.loc[\"decvar\", \"derinc\"] = 0.2\n",
+    "pst.parameter_groups.loc[\"decvar\", \"derinc\"] = 0.2 # 20% of the original pumping rate\n",
     "pst.parameter_groups.loc[\"decvar\", \"inctyp\"] = \"absolute\"\n",
     "pst.pestpp_options[\"opt_dec_var_groups\"] = \"decvar\""
    ]
@@ -342,7 +342,7 @@
    "id": "34",
    "metadata": {},
    "source": [
-    "find any observation name that have \"forecast\", \"diff\" and \"riv-swgw\" in the name.  There should be exactly 1 of these"
+    "find any observation name that has \"forecast\", \"diff\" and \"riv-swgw\" in the name.  There should be exactly 1 of these"
    ]
   },
   {
@@ -352,7 +352,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find the river sw-gw exchange difference observation and perfer it to be 0 so that historical and future are equal\n",
+    "# find the river sw-gw exchange difference observation \n",
     "fobs = obs.loc[\n",
     "    (obs.obsnme.str.contains(\"forecast\"))\n",
     "    & (obs.obsnme.str.contains(\"diff\"))\n",
@@ -386,7 +386,7 @@
    "id": "38",
    "metadata": {},
    "source": [
-    "Set the observation in \"fobs\" to have a weight of 1.0, set the `obgnme` to \"greater_than\" and the `obsval` to 0.0.  This tells pestpp-opt that we want the future long-term average swgw exchange to be at least the same amount as the historic equivalent."
+    "Set the observation named in \"fobs\" in the original `obs` to have a weight of 1.0, set the `obgnme` to \"greater_than\" and the `obsval` to 0.0.  This tells pestpp-opt that we want the future long-term average swgw exchange to be at least the same amount as the historic equivalent."
    ]
   },
   {
@@ -414,7 +414,7 @@
    "id": "41",
    "metadata": {},
    "source": [
-    "Find the sum of future gw pumping observation - this will be our objective function that we want to maximize.  The observation should have \"forecast\",\"pred\" and \"wel\" in the name.  There should be only one observation.  Assign this observation to a variable called `obj_name`"
+    "Find the sum of future gw pumping observation - this will be our objective function that we want to maximize.  The observation should have \"forecast\",\"pred\" and \"wel\" in the name.  There should be only one observation.  "
    ]
   },
   {
@@ -431,8 +431,6 @@
     "    :,\n",
     "]\n",
     "assert len(wobs) == 1\n",
-    "# obs.loc[wobs.obsnme,\"weight\"] = 1.0\n",
-    "# obs.loc[wobs.obsnme,\"obgnme\"] = \"greater_than\"\n",
     "obj_name = wobs.obsnme.values[0]\n",
     "obj_name"
    ]
@@ -559,11 +557,7 @@
    "id": "55",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pst.control_data.noptmax = 1\n",
-    "pst.pestpp_options[\"opt_objective_function\"] = obj_name\n",
-    "pst.pestpp_options[\"opt_direction\"] = \"max\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
