--- a/exercises/notebooks/SV_setup_control_file.ipynb
+++ b/exercises/notebooks/SV_setup_control_file.ipynb
@@ -241,6 +241,8 @@
    "metadata": {},
    "source": [
     "Make a `pyemu.utils.PstFrom` instance called \"pf\".  This will be how we build up the pest interface.  Set the following args:\n",
+    " - `org_d` to `tmp_d`\n",
+    " - `new_d` to `working_d`\n",
     " - `remove_existing` to `True`\n",
     " - `spatial_references` to `gwf.modelgrid`\n",
     " - `zero_based` to `False`\n",
@@ -369,7 +371,7 @@
    "id": "35",
    "metadata": {},
    "source": [
-    "Now lets gather up all the output timeseries csv files we want to have as observations:"
+    "Now lets gather up all the other output timeseries csv files we want to have as observations:"
    ]
   },
   {
@@ -621,7 +623,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(k_files) == gwf.dis.nlay.data\n",
+    "assert len(k33_files) == gwf.dis.nlay.data\n",
     "k33_files.sort()"
    ]
   },
@@ -630,7 +632,7 @@
    "id": "59",
    "metadata": {},
    "source": [
-    "Now setup pilot points and constant parameters for these arrays in a similar way that we did for K, but focusing on K33 of model layer 3 (the semi-confining unit).  Tag these parmaeter sets with \"k33-pp-conf\" and \"k33-cn-conf\" for the pilot points and constant parameters, respectively.  Give the pilot points and upper and lower bound of 100 and 0.01; give the constant parameter bounds of 10 and 0.1 "
+    "Now setup pilot points and constant parameters for these arrays in a similar way that we did for K, but focusing on K33 of model layer 3 (the semi-confining unit).  Tag these parmaeter sets with \"k33-pp-conf\" and \"k33-cn-conf\" for the pilot points and constant parameters, respectively.  Give the pilot points and upper and lower bound of 100 and 0.01; give the constant parameter bounds of 10 and 0.1 (or if you want to, choose your own bounds!)"
    ]
   },
   {
@@ -668,7 +670,7 @@
    "id": "63",
    "metadata": {},
    "source": [
-    "And SS and sy (in layer 1 only).  Same as before: find the SS arrays (tagged with \"sv.sto_ss\")\", and into a list called \"ss_files\":\n"
+    "And SS and SY (in layer 1 only).  Same as before: find the SS arrays (tagged with \"sv.sto_ss\")\", and into a list called \"ss_files\":\n"
    ]
   },
   {
@@ -1352,7 +1354,7 @@
    "id": "110",
    "metadata": {},
    "source": [
-    "We need to enforce parameter bounds on those realizations, save it and add an arg to the control file to tell ies to use it:"
+    "We need to enforce parameter bounds on those realizations, save it and add an arg to the control file to tell ies to use it.  First enforce bounds:"
    ]
   },
   {
@@ -1553,7 +1555,9 @@
    "id": "129",
    "metadata": {},
    "source": [
-    "now we need to set the weights and expected noise for each observation datum:"
+    "now we need to set the weights and expected noise for each observation datum.\n",
+    "\n",
+    "First reset the weights to 0.0 and define some empty/null columns that will be filled later:"
    ]
   },
   {
@@ -1575,7 +1579,7 @@
    "id": "131",
    "metadata": {},
    "source": [
-    "In this block, the weights and noise for each observation is defined...do you agree with these values?"
+    "In this block, the weights and noise for each observation is defined...do you agree with these values?  Change them if you dont agree!"
    ]
   },
   {
@@ -1711,18 +1715,14 @@
    "id": "142",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pst.control_data.noptmax = 0\n",
-    "pst.write(os.path.join(working_d, \"pest.pst\"), version=2)\n",
-    "pyemu.os_utils.run(\"pestpp-ies pest.pst\", cwd=working_d)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "143",
    "metadata": {},
    "source": [
-    "Now we are going to generate some autocorrelated timeseries noise to use in the history matching.  We are going to use a (very) long correlation lenght to express that we are more interested in low-frequency noise/error than high frequency"
+    "Now we are going to generate some autocorrelated timeseries noise to use in the history matching.  We are going to use a long correlation lenght to express that we are more interested in low-frequency noise/error than high frequency"
    ]
   },
   {
@@ -1732,7 +1732,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "autocorrelation_length_days = 365 * 5"
+    "autocorrelation_length_days = 365 * 5  #change this to your liking..."
    ]
   },
   {
@@ -1832,7 +1832,7 @@
    "id": "153",
    "metadata": {},
    "source": [
-    "Save the noise ensemble in the working directory and call it \"noise.csv\" using the `.to_csv()` methhod"
+    "Save the noise ensemble in the working directory and call it \"noise.csv\" using the `.to_csv()` method"
    ]
   },
   {
@@ -1871,7 +1871,7 @@
    "id": "157",
    "metadata": {},
    "source": [
-    "call the helpers plot_ies_timeseries() and pass it the working directory name.  Then go to the working directory and inspect \"timeseries.pdf\".  Do yo think the noisy obs realizations are acceptable?"
+    "call the helpers' `plot_ies_timeseries()` and pass it the working directory name.  Then go to the working directory and inspect \"timeseries.pdf\".  Do you think the noisy obs realizations are acceptable?  If not, go back and change them..."
    ]
   },
   {
@@ -1887,7 +1887,7 @@
    "id": "159",
    "metadata": {},
    "source": [
-    "As you can see from the phi group summary, we need some rebalanced weights.  One way to do this is the the ies_phi_factor_file.  First define a `dict` of string-tags:phi fractions we want:\n"
+    "Maybe we want to rebalanced weights to focus on certain aspects of the observation data.  One way to do this is the the ies_phi_factor_file.  First define a `dict` of string-tags:phi fractions we want:\n"
    ]
   },
   {
