update the intro notebook

--- a/exercises/notebooks/intro-flopy-gwt.ipynb
+++ b/exercises/notebooks/intro-flopy-gwt.ipynb
@@ -80,7 +80,7 @@
    "id": "6",
    "metadata": {},
    "source": [
-    "### Change the simulation workspace"
+    "Lets look at the base model using FloPy"
    ]
   },
   {
@@ -89,13 +89,77 @@
    "id": "7",
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14",
+   "metadata": {},
+   "source": [
+    "### Change the simulation workspace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "sim.set_sim_path(ws)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "16",
    "metadata": {},
    "source": [
     "### Add the groundwater transport model"
@@ -104,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11",
+   "id": "19",
    "metadata": {},
    "source": [
     "Create the gwt disv package fron gwf disv data"
@@ -135,14 +199,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "21",
    "metadata": {},
    "source": [
     "Create gwt ic file with initial concentration of 0.0"
@@ -151,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "23",
    "metadata": {},
    "source": [
     "Create the advection file. Use the TVD or UTVD scheme"
@@ -169,14 +233,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "25",
    "metadata": {},
    "source": [
     "Add the dispersion package (DSP) with alphah = 75, ath1=7.5, and diffc=0"
@@ -185,14 +249,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "27",
    "metadata": {},
    "source": [
     "Add the mst package with porosity equal to the gwf sy, zero_order_decay=True, and decay=-1/year"
@@ -200,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "28",
    "metadata": {},
    "source": [
     "Add the ssm package with no variables except gwt"
@@ -209,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23",
+   "id": "31",
    "metadata": {},
    "source": [
     "Add the mover package (mvt) since movers are turned on in the base model"
@@ -248,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "33",
    "metadata": {},
    "source": [
     "Add the IMS package"
@@ -266,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "35",
    "metadata": {},
    "source": [
     "Add the GWF-GWT exchange"
@@ -296,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "37",
    "metadata": {},
    "source": [
     "### Write and run the simulation"
@@ -320,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "40",
    "metadata": {},
    "source": [
     "## Plot the results"
@@ -348,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -441,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": []
