--- a/exercises/instructors/SV_advanced.ipynb
+++ b/exercises/instructors/SV_advanced.ipynb
@@ -1849,7 +1849,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tampa26mf6pp",
+   "display_name": "default",
    "language": "python",
    "name": "python3"
   },
@@ -1863,7 +1863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
